fix: atualiza Barber Hub para versão 1.8.0 , atualização de design geral desktop / planos em func adm
